# bec

./: .coverage  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  bec_config.yam  bec_config.yaml  bec_config_dev.yaml  bec_config_template.yaml  bec_server  config_session_start_e20632.yaml  coverage.xml  docker-compose.yaml  e2e_runtime_config_test.yaml  launch_docker_services_bec.sh  start_tmux_session.sh  test_config.yaml
bec_client/: .coverage  config_saved.yaml  coverage.xml  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
bec_client/bec_client/: __init__.py  alarm_handler.py  beamline_mixin.py  bec_client.py  bec_ipython_client.py  bec_magics.py  bec_startup.py  callback_handler.py  callbacks.py  config_helper.py  devicemanager_client.py  main.py  prettytable.py  progressbar.py  queue_items.py  request_items.py  scan_items.py  scan_manager.py  scan_queue.py  scans.py  signals.py  user_scripts_mixin.py
bec_client/bec_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bec_client/scripts/: grum_plotter_example.py  load_xray_align.py  lscans.py  tomo_script.py  wed_night_scans.py  x_ray_eye_align.py
bec_client/tests/: Dockerfile
bec_lib/: README.md  pyproject.toml  setup.cfg  setup.py
bec_lib/bec_lib/: BECMessage.py  __init__.py  acl_login.py  alarm_handler.py  async_data.py  bec_events.py  bec_plotter.py  bec_service.py  bec_worker_manager.py  bl_checks.py  bl_conditions.py  callback_handler.py  channel_monitor.py  client.py  config_helper.py  connector.py  dap_plugin_objects.py  dap_plugins.py  device.py  device_connector.py  device_monitor_utils.py  devicemanager.py  devicemanager_client.py  endpoints.py  file_utils.py  lmfit_serializer.py  logbook_connector.py  logger.py  messages.py  metadata_schema.py  observer.py  plugin_helper.py  queue_items.py  redis_connector.py  request_items.py  scan_data.py  scan_data_container.py  scan_history.py  scan_items.py  scan_manager.py  (+7 more)
bec_lib/scripts/: image_read.py
bec_lib/tests/: _test_redis_connector.py  test_acl_login.py  test_async_data.py  test_baseline_data.py  test_beamline_checks.py  test_bec_events.py  test_bec_messages.py  test_bec_plotter.py  test_bec_service.py  test_bec_worker_manager.py  test_bl_conditions.py  test_channel_monitor.py  test_config_helper.py  test_core_utils.py  test_dap_plugins.py  test_data_container.py  test_device_manager.py  test_device_manager_client.py  test_devices.py  test_file_utils.py  test_metadata_schema.py  test_observer.py  test_plugin_system.py  test_redis_connector.py  test_redis_connector_fakeredis.py  test_scan_context.py  test_scan_data.py  test_scan_items.py  test_scan_manager.py  test_scan_object.py  test_scan_report.py  test_serializer.py  test_signature_serializer.py  test_threadpool.py  test_timeout.py  test_user_scripts_mixin.py
bec_lib/util_scripts/: channel_monitor.py  create_plugin_structure.py  init_config.py
bec_server/: pyproject.toml  setup.cfg  setup.py
bec_server/bec_server/: __init__.py  launch.py  main.py  service_handler.py  tmux_launch.py
bec_server/tests/: test_main.py  test_service_handler.py  test_tmux_launch.py
bec_webterm/: setup.cfg
bec_webterm/bec_webterm/: bec_webterm.py
data_processing/: Dockerfile  launch.py  pyproject.toml  setup.cfg  setup.py
data_processing/data_processing/: __init__.py  dap_server.py  dap_service.py  dap_service_manager.py  lmfit1d_service.py  stream_processor.py  worker_manager.py
data_processing/tests/: conftest.py  test_cli_launch.py  test_dap_cli_launch.py  test_dap_server.py  test_dap_service_manager.py  test_lmfit1d_service.py  test_lmfit_processor.py  test_nested_get.py  test_stream_processor.py  test_worker_manager.py
device_server/: .coverage  Dockerfile  coverage.xml  launch.py  pyproject.toml  report.xml  requirements.txt  setup.cfg  setup.py
device_server/bec_device_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
device_server/device_server/: __init__.py  device_server.py  rpc_mixin.py
device_server/tests/: conftest.py  test_cli_launch.py  test_config_handler.py  test_device_manager.py  test_device_manager_ds.py  test_device_serializer.py  test_device_server.py  test_device_server_cli_launch.py  test_rpc_mixin.py
file_writer/: Dockerfile  launch.py  layout_cSAXS_NXsas.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py
file_writer/file_writer/: __init__.py  file_writer.py  file_writer_manager.py
file_writer/file_writer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
file_writer/file_writer_plugins/: cSAXS.py  default_writer.py
file_writer/tests/: test_file_writer.py  test_file_writer_cli_launch.py  test_file_writer_manager.py
scan_bundler/: .coverage  Dockerfile  coverage.xml  launch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
scan_bundler/scan_bundler/: bec_emitter.py  bluesky_emitter.py  devicemanager_sb.py  emitter.py  scan_bundler.py
scan_bundler/scan_bundler.egg-info/: PKG-INFO  SOURCES.txt
scan_bundler/tests/: conftest.py  test_bec_emitter.py  test_bluesky_emitter.py  test_cli_launch.py  test_emitter.py  test_scan_bundler.py  test_scan_bundler_cli_launch.py
scan_server/: .coverage  Dockerfile  coverage.xml  launch.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
scan_server/ScanServer.egg-info/: PKG-INFO  SOURCES.txt
scan_server/scan_plugins/: FermatSpiralScan2.py  LamNIFermatScan.py  OTFScan.py  __init__.py  async_test.py  flomniFermatScan.py  flomni_fermat_scan.py  otf_scan.py  owis_grid.py  sgalil_grid.py  tomcat_scan.py  tomcat_scans.py
scan_server/scan_server/: __init__.py  bkqueue.py  device_msg_mixin.py  devicemanager.py  observer.py  path_optimization.py  scan_assembler.py  scan_guard.py  scan_manager.py  scan_queue.py  scan_server.py  scan_stubs.py  scan_worker.py  scans.py
scan_server/tests/: test_cli_launch.py  test_devicemanager.py  test_flomni_fermat_scan.py  test_path_optimization.py  test_queue.py  test_scan_guard.py  test_scan_server_cli_launch.py  test_scan_server_queue.py  (+4 more)
scihub/: Dockerfile  launch.py  pyproject.toml  setup.cfg  setup.py
(+483 files in other folders)
