[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bec-ipython-client"
version = "1.2.1"
description = "BEC IPython client"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bec_lib",
    "h5py",
    "ipython",
    "numpy",
    "pyepics",
    "requests",
    "rich",
    "typeguard",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-random-order",
]

[project.urls]
"Bug Tracker" = "https://gitlab.psi.ch/bec/bec/issues"
Homepage = "https://gitlab.psi.ch/bec/bec"

[project.scripts]
bec = "bec_client:main"

[tool.hatch.build.targets.wheel]
include = ["*"]
