[metadata]
name = bec_client
description = BEC Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .

[semantic_release]
version_variable = ../semantic_release/__init__.py:__version__

[coverage:run]
omit = ./bec_client/plugins/*

