[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bec-server"
version = "1.2.1"
description = "BEC server"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bec_dap",
    "bec_device_server",
    "bec_file_writer",
    "bec_ipython_client",
    "bec_lib",
    "bec_scan_bundler",
    "bec_scan_server",
    "bec_scihub",
    "libtmux",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-random-order",
]

[project.scripts]
bec-server = "bec_server:main"

[project.urls]
"Bug Tracker" = "https://gitlab.psi.ch/bec/bec/issues"
Homepage = "https://gitlab.psi.ch/bec/bec"

[tool.setuptools.packages]
find = {}
