[metadata]
name = bec_webterm
version =  attr: bec_webterm.__version__
author = PSI
description = BEC as a Flask application
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPLv3
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3

[options]
packages_dir=
    =bec_webterm
packages=find:
python_requires = >=3.10
install_requires =
    bec_ipython_client
    flask-socketio
    flask

[options.packages.find]
where=bec_webterm

[options.package_data]
bec_webterm = ["static/*", "static/img/*"]

[options.entry_points]
console_scripts =
    bec_webterm = bec_webterm:main

