[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bec-device-server"
version = "1.2.1"
description = "BEC service for connecting, controlling and monitoring devices through ophyd"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bec_lib",
    "msgpack",
    "numpy",
    "ophyd",
    "ophyd_devices",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pytest",
    "pytest-random-order",
]

[project.scripts]
bec-device-server = "device_server:main"

[project.urls]
"Bug Tracker" = "https://gitlab.psi.ch/bec/bec/issues"
Homepage = "https://gitlab.psi.ch/bec/bec"

[tool.setuptools.packages]
find = {}
