[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bec-scan-bundler"
version = "1.2.1"
description = "BEC service for synchronizing and bundling scan data"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bec_lib",
    "msgpack",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "pylint",
    "pytest",
    "pytest-random-order",
]

[project.scripts]
bec-scan-bundler = "scan_bundler:main"

[project.urls]
"Bug Tracker" = "https://gitlab.psi.ch/bec/bec/issues"
Homepage = "https://gitlab.psi.ch/bec/bec"

[tool.hatch.build.targets.wheel]
include = ["*"]
